--- a/Bracez/ui/editor/MarkerTableCellView.xib
+++ b/Bracez/ui/editor/MarkerTableCellView.xib
@@ -8,60 +8,83 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MarkerTableCellView">
             <connections>
                 <outlet property="imageView" destination="7Tx-6N-CrR" id="Nc2-nQ-6hy"/>
+                <outlet property="titleView" destination="2f7-pR-6Tq" id="uu8-rc-gtF"/>
                 <outlet property="view" destination="c22-O7-iKe" id="hmP-q3-CJD"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="309" height="26"/>
+        <customView misplaced="YES" id="c22-O7-iKe">
+            <rect key="frame" x="0.0" y="0.0" width="285" height="29"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="7Tx-6N-CrR">
-                    <rect key="frame" x="0.0" y="14" width="24" height="12"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="24" id="1aD-0h-UOI"/>
-                    </constraints>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSCaution" id="viV-yR-Fvl"/>
-                </imageView>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="2f7-pR-6Tq">
-                    <rect key="frame" x="24" y="14" width="287" height="12"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="12" id="l4o-zo-YvW"/>
-                    </constraints>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" alignment="left" title="Title" usesSingleLineMode="YES" id="YSK-Wd-tMp">
-                        <font key="font" metaFont="system" size="11"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                    <connections>
-                        <binding destination="-2" name="value" keyPath="objectValue.message" id="mCf-zG-1Xi"/>
-                    </connections>
-                </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="8re-B7-Q3i">
-                    <rect key="frame" x="24" y="0.0" width="287" height="14"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" title="Label" usesSingleLineMode="YES" id="lqF-gd-EwA">
-                        <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="systemGrayColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                    <connections>
-                        <binding destination="-2" name="value" keyPath="objectValue.locationAsText" id="qmO-fE-aIg"/>
-                    </connections>
-                </textField>
+                <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qei-cJ-ToS">
+                    <rect key="frame" x="0.0" y="0.0" width="285" height="29"/>
+                    <subviews>
+                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="7Tx-6N-CrR">
+                            <rect key="frame" x="0.0" y="13" width="16" height="16"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="16" id="1aD-0h-UOI"/>
+                                <constraint firstAttribute="height" constant="16" id="QHA-st-pb4"/>
+                            </constraints>
+                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSCaution" id="viV-yR-Fvl"/>
+                        </imageView>
+                        <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TS4-LN-wTl">
+                            <rect key="frame" x="20" y="0.0" width="265" height="29"/>
+                            <subviews>
+                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="2f7-pR-6Tq">
+                                    <rect key="frame" x="-2" y="14" width="27" height="15"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="15" id="l4o-zo-YvW"/>
+                                    </constraints>
+                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" alignment="left" title="Title" usesSingleLineMode="YES" id="YSK-Wd-tMp">
+                                        <font key="font" metaFont="smallSystem"/>
+                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    </textFieldCell>
+                                    <connections>
+                                        <binding destination="-2" name="value" keyPath="objectValue.message" id="mCf-zG-1Xi"/>
+                                    </connections>
+                                </textField>
+                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="8re-B7-Q3i">
+                                    <rect key="frame" x="-2" y="0.0" width="33" height="14"/>
+                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" title="Label" usesSingleLineMode="YES" id="lqF-gd-EwA">
+                                        <font key="font" metaFont="smallSystem"/>
+                                        <color key="textColor" name="systemGrayColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    </textFieldCell>
+                                    <connections>
+                                        <binding destination="-2" name="value" keyPath="objectValue.locationAsText" id="qmO-fE-aIg"/>
+                                    </connections>
+                                </textField>
+                            </subviews>
+                            <visibilityPriorities>
+                                <integer value="1000"/>
+                                <integer value="1000"/>
+                            </visibilityPriorities>
+                            <customSpacing>
+                                <real value="3.4028234663852886e+38"/>
+                                <real value="3.4028234663852886e+38"/>
+                            </customSpacing>
+                        </stackView>
+                    </subviews>
+                    <visibilityPriorities>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                    </visibilityPriorities>
+                    <customSpacing>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                    </customSpacing>
+                </stackView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="2f7-pR-6Tq" secondAttribute="trailing" id="3Um-aP-P8r"/>
-                <constraint firstItem="2f7-pR-6Tq" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="4d6-qT-gTr"/>
-                <constraint firstItem="7Tx-6N-CrR" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="6gu-pT-ns2"/>
-                <constraint firstItem="8re-B7-Q3i" firstAttribute="top" secondItem="2f7-pR-6Tq" secondAttribute="bottom" id="ULS-Xa-3Tp"/>
-                <constraint firstItem="2f7-pR-6Tq" firstAttribute="height" secondItem="7Tx-6N-CrR" secondAttribute="height" id="aiW-yX-kXe"/>
-                <constraint firstItem="7Tx-6N-CrR" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="dir-6Y-2h7"/>
-                <constraint firstItem="8re-B7-Q3i" firstAttribute="leading" secondItem="2f7-pR-6Tq" secondAttribute="leading" id="eID-gV-WPO"/>
-                <constraint firstItem="2f7-pR-6Tq" firstAttribute="leading" secondItem="7Tx-6N-CrR" secondAttribute="trailing" constant="2" id="uu0-tq-4N9"/>
-                <constraint firstAttribute="trailing" secondItem="8re-B7-Q3i" secondAttribute="trailing" id="wsZ-ru-nJB"/>
+                <constraint firstItem="Qei-cJ-ToS" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="9lZ-7T-8s5"/>
+                <constraint firstItem="Qei-cJ-ToS" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="YXY-FU-I1w"/>
+                <constraint firstAttribute="trailing" secondItem="Qei-cJ-ToS" secondAttribute="trailing" id="cfu-x8-5RP"/>
+                <constraint firstAttribute="bottom" secondItem="Qei-cJ-ToS" secondAttribute="bottom" id="kvO-Uy-gQR"/>
             </constraints>
-            <point key="canvasLocation" x="-351.5" y="21"/>
+            <point key="canvasLocation" x="-434.5" y="7"/>
         </customView>
     </objects>
     <resources>
